--- a/index.html
+++ b/index.html
@@ -13,6 +13,20 @@
             fontFamily: {
               sans: ['Inter', 'sans-serif'],
             },
+            keyframes: {
+              fadeIn: {
+                '0%': { opacity: '0', transform: 'translateY(10px)' },
+                '100%': { opacity: '1', transform: 'translateY(0)' },
+              },
+              zoomIn: {
+                '0%': { opacity: '0', transform: 'scale(0.95) translateY(10px)' },
+                '100%': { opacity: '1', transform: 'scale(1) translateY(0)' },
+              }
+            },
+            animation: {
+              fadeIn: 'fadeIn 0.4s ease-out forwards',
+              zoomIn: 'zoomIn 0.3s ease-out forwards',
+            }
           },
         },
       }
@@ -22,7 +36,6 @@
       body {
         font-family: 'Inter', sans-serif;
       }
-      /* Custom scrollbar for modern feel */
       ::-webkit-scrollbar {
         width: 8px;
       }
@@ -40,12 +53,12 @@
         background: #059669; 
       }
       
-      @keyframes fadeIn {
-        from { opacity: 0; transform: translateY(10px); }
-        to { opacity: 1; transform: translateY(0); }
+      .no-scrollbar::-webkit-scrollbar {
+        display: none;
       }
-      .animate-fadeIn {
-        animation: fadeIn 0.4s ease-out forwards;
+      .no-scrollbar {
+        -ms-overflow-style: none;
+        scrollbar-width: none;
       }
     </style>
   <script type="importmap">
